--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,12 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.22.0",
+    "date-fns": "^2.24.0",
     "next": "11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-icons": "^4.2.0",
+    "react-modal": "^3.14.3",
+    "sass": "^1.42.1"
   },
   "devDependencies": {
     "@types/react": "17.0.26",
+    "@types/react-modal": "^3.12.1",
     "eslint": "7.32.0",
     "eslint-config-next": "11.1.2",
     "typescript": "4.4.3"
