--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,14 +1,14 @@
 version: "3.7"
 
 services:
-  # frontend:
-  #   build: 
-  #     context: .
-  #     dockerfile: Dockerfile.front
-  #   volumes:
-  #     - ./frontend:/app/node
-  #   ports: 
-  #     - 3000:3000
+  frontend:
+    build: 
+      context: .
+      dockerfile: Dockerfile.front
+    volumes:
+      - ./frontend:/app/node
+    ports: 
+      - 3000:3000
       
   backend:
     build:
